[package]
name = "fuzzyseek"
version = "0.3.0"
edition = "2021"
description = "A high-performance fuzzy finder TUI for millions of lines"
license = "MIT"

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
nucleo = "0.5"
nucleo-matcher = "0.3"
unicode-width = "0.2"
strip-ansi-escapes = "0.2"
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
